<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <LinearLayout style="@style/wrap_layout">

                <LinearLayout
                    style="@style/top_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_height"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:gravity="left|center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/lock" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/update_pwd" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_weight="1"
                            android:src="@drawable/arrow_right" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    style="@style/bg_line"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <LinearLayout
                    style="@style/mid_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_height"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:gravity="left|center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/about" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_helpsend" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_weight="1"
                            android:src="@drawable/arrow_right" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    style="@style/bg_line"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <LinearLayout
                    style="@style/mid_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_height"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:gravity="left|center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/option" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feedback" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_weight="1"
                            android:src="@drawable/arrow_right" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    style="@style/bg_line"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <LinearLayout
                    style="@style/mid_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_height"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:gravity="left|center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/agreement" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agreement" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_weight="1"
                            android:src="@drawable/arrow_right" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    style="@style/bg_line"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <LinearLayout
                    android:id="@+id/select_clear_cache"
                    style="@style/mid_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_height"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="left|center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/clear_cache" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clear_cache" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.85"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_cache_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="TextView" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_quit"
                    style="@style/RbButton.Inverse.Red"
                    android:layout_width="300dp"
                    android:layout_marginTop="40dp"
                    android:text="退出当前账号"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/top_bar" />
    </RelativeLayout>
</layout>